# agh-reaktory

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  library.qmd  main.py  pyproject.toml
docs/: index.html  library.html  search.json
docs/labs/: 01-greedy.html  02-pyomo-milp.html  03-local-search.html  04-simulated-annealing.html  05-pareto.html
labs/: 01-greedy.qmd  02-pyomo-milp.qmd  03-local-search.qmd  04-simulated-annealing.qmd  05-pareto.qmd
src/utilis/: __init__.py  library.py
tests/: test_library.py
